First proper version of Persons and Person controller
