# housingserver-server/src/main/java/fi/rikusarlin/housingserver/controllerimpl/PersonControllerImpl.java
@@ -17,8 +17,8 @@ import org.springframework.web.bind.annotation.RestController;
 
 import fi.rikusarlin.housingserver.api.PersonApi;
 import fi.rikusarlin.housingserver.data.PersonEntity;
+import fi.rikusarlin.housingserver.exception.DuplicateNotAllowedException;
 import fi.rikusarlin.housingserver.exception.NotFoundException;
-import fi.rikusarlin.housingserver.model.Id;
 import fi.rikusarlin.housingserver.model.Person;
 import fi.rikusarlin.housingserver.repository.PersonRepository;
 import fi.rikusarlin.housingserver.validation.AllChecks;
@@ -35,8 +35,8 @@ public class PersonControllerImpl implements PersonApi{
 	private static Validator validator = Validation.buildDefaultValidatorFactory().getValidator();
 
 	@Override
-	public ResponseEntity<Person> fetchPersonById(Id id) {
-		PersonEntity p = personRepo.findById(Integer.getInteger(id.getId())).orElseThrow(() -> new NotFoundException("Person", Integer.getInteger(id.getId())));
+	public ResponseEntity<Person> fetchPersonById(Integer id) {
+		PersonEntity p = personRepo.findById(id).orElseThrow(() -> new NotFoundException("Person", id));
 		return ResponseEntity.ok(p.toPerson());
 	}
  
@@ -47,27 +47,31 @@ public class PersonControllerImpl implements PersonApi{
 		if (!violations.isEmpty()) {
 			throw new ConstraintViolationException(violations);
 		}
+		personRepo.findByPersonNumber(person.getPersonNumber()).ifPresent(
+				thePerson -> {
+					throw new DuplicateNotAllowedException("personNumber "+thePerson.getPersonNumber());
+				});
 		return ResponseEntity.ok(personRepo.save(p).toPerson());
 	}
 
 	@Override
-	public ResponseEntity<Person> checkPersonById(Id id) {
-    	PersonEntity p = personRepo.findById(Integer.getInteger(id.getId())).orElseThrow(() -> new NotFoundException("Person", Integer.getInteger(id.getId())));
+	public ResponseEntity<Person> checkPersonById(Integer id) {
+    	PersonEntity p = personRepo.findById(id).orElseThrow(() -> new NotFoundException("Person", id));
 		Set<ConstraintViolation<PersonEntity>> violations =  validator.validate(p, AllChecks.class);
 		if (!violations.isEmpty()) {
 			throw new ConstraintViolationException(violations);
 		}
-		return ResponseEntity.ok(personRepo.save(p).toPerson());
+		return fetchPersonById(id);
 	}
 
 	@Override
-	public ResponseEntity<Person> updatePerson(Id id, Person person) {
+	public ResponseEntity<Person> updatePerson(Integer id, Person person) {
 			PersonEntity p = new PersonEntity(person);
 			Set<ConstraintViolation<PersonEntity>> violations =  validator.validate(p, InputChecks.class);
 			if (!violations.isEmpty()) {
 				throw new ConstraintViolationException(violations);
 			}
-			Optional<PersonEntity> previousPerson = personRepo.findById(Integer.getInteger(id.getId()));
+			Optional<PersonEntity> previousPerson = personRepo.findById(id);
 			previousPerson.ifPresentOrElse(
 				(value) 
 					-> {
@@ -85,8 +89,8 @@ public class PersonControllerImpl implements PersonApi{
 	}
 	
 	@Override
-	public ResponseEntity<Void> deletePerson(Id id) {
-		PersonEntity person = personRepo.findById(Integer.getInteger(id.getId())).orElseThrow(() -> new NotFoundException("Person", Integer.getInteger(id.getId())));
+	public ResponseEntity<Void> deletePerson(Integer id) {
+		PersonEntity person = personRepo.findById(id).orElseThrow(() -> new NotFoundException("Person", id));
  		personRepo.delete(person);
  		return new ResponseEntity<Void>(HttpStatus.OK);
 	}
